@@ -20,6 +20,13 @@ from Products.CMFCore.interfaces import ISiteRoot
 # XXX: Should move to zope.container in the future
 from zope.app.container.interfaces import INameChooser
 
+try:
+    from plone.uuid.interfaces import IUUID
+    from plone.app.uuid.utils import uuidToObject
+    HAS_UUID = True
+except ImportError:
+    HAS_UUID = False
+
 log = logging.getLogger(__name__)
 
 # Not thread safe, but downside of a write conflict is very small
@@ -143,7 +150,13 @@ def addContentToContainer(container, object, checkConstraints=True):
     object.id = name
 
     newName = container._setObject(name, object)
-    return container._getOb(newName)
+    try:
+        return container._getOb(newName)
+    except AttributeError:
+        # work around edge case where a content rule may have moved the item
+        uuid = IUUID(object)
+        return uuidToObject(uuid)
+
 
 def createContentInContainer(container, portal_type, checkConstraints=True, **kw):
     content = createContent(portal_type, **kw)
